--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,8 +23,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/instagram"
-                android:textSize="22sp"
+                android:text="@string/Instagram"
+                android:textSize="25sp"
                 android:maxLines="1"
                 android:fontFamily="@font/pacifico"
                 android:textColor="@android:color/black" />
